# project-series-temporais

./: LICENSE  README.md  milk.py  pyproject.toml  requirements.txt
